--- a/package.json
+++ b/package.json
@@ -30,5 +30,17 @@
     "mocha": "^2.1.0",
     "nock": "^0.56.0",
     "npm-prepublish": "^1.0.2"
-  }
+  },
+  "keywords": [
+    "fetch",
+    "isomorphic-fetch",
+    "http",
+    "request",
+    "webpack",
+    "browserify",
+    "react-native",
+    "browser",
+    "whatwg-fetch",
+    "whatwg"
+  ]
 }
